ajout d'un champ de saisie resizable

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="texte_diplome">Diplôme de Rugby</div>
-            <div class="texte_diplome nom">pour Nom Prenom</div>
+            <div class="texte_diplome nom">pour <input oninput="this.size = this.value.length" class="texte_diplome nom saisie" value=""/></div>
             <div class="texte_diplome date">Fait le : 30/11/2022</div>
         </div>
         <div id="droite">
